--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,12 @@
 ServerName: ""
 Register:
   Blind: false
+  Nausea: false
   TimeOut: 60
   Max: 2
 Login:
   Blind: true
+  Nausea: true
   TimeOut: 30
   MaxTries: 5
 AntiBot: false
