--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: "LockLogin"
 version: ${project.version}
 main: ml.karmaconfigs.LockLogin.Spigot.Main
+api-version: "1.16"
 authors:
   - KarmaConfigs
   - KarmaDev
