--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,11 @@
     <groupId>ml.karmaconfigs</groupId>
     <artifactId>LockLogin</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.2.1</version>
+    <version>1.0.2.2</version>
 
     <modules>
         <module>FatVersion</module>
         <module>FlatVersion</module>
+        <module>InstallationMedia</module>
     </modules>
 </project>
