--- a/FatVersion/pom.xml
+++ b/FatVersion/pom.xml
@@ -5,12 +5,13 @@
     <parent>
         <artifactId>LockLogin</artifactId>
         <groupId>ml.karmaconfigs</groupId>
-        <version>1.0.2.4</version>
+        <version>1.0.2.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>FatVersion</artifactId>
     <build>
+        <finalName>LockLogin_fat</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -71,7 +72,7 @@
         <dependency>
             <groupId>ml.karmaconfigs</groupId>
             <artifactId>KarmaAPI</artifactId>
-            <version>2.3-SNAPSHOT</version>
+            <version>2.4-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
