--- a/FlatVersion/src/main/resources/messages/messages_es.yml
+++ b/FlatVersion/src/main/resources/messages/messages_es.yml
@@ -61,7 +61,7 @@ Migrating: '&aMigrando la cuenta de &b( &f{uuid} &b) &aa MySQL'
 MigratingYaml: '&aMigrando la cuenta de &b( &f{uuid} &b) &aa Yaml'
 MigratingAll: '&aMigrando las cuentas de MySQL a Yaml'
 Migrated: '&aMigración de cuenta(s) finalizada'
-MigrationUsage: '&cUso correcto: &b/migrate'
+MigrationUsage: '&cUso correcto: &b/migrate [authme]'
 MigrationConnectionError: '&cHubo un error al intentar establecer conexión con MySQL'
 LocationsReset: '&aTodas las últimas ubicaciones han sido eliminadas'
 LocationReset: '&aLa utlima ubicación de &7{player} &aha sido eliminada'
