Updated source code
Updated source code of update 1.0.3.9 where the API had a change to use the new IPStorager system when asking for alt accounts

--- a/FatVersion/src/main/resources/messages/messages_cz.yml
+++ b/FatVersion/src/main/resources/messages/messages_cz.yml
@@ -72,7 +72,7 @@ MaxRegisters:
   - ''
   - '&ePokud si myslíš, že se jedná o chybu, prosím nahlaste to na'
   - '&bhttps://discordexample.gg'
-LookUpUsage: '&cSprávné použití: &b/lookup -p<player> | -a<IP>'
+LookUpUsage: '&cSprávné použití: &b/lookup <player>'
 IllegalName:
   - '&cZakázané jméno'
   - ''
