--- a/FatVersion/pom.xml
+++ b/FatVersion/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>LockLogin</artifactId>
         <groupId>ml.karmaconfigs</groupId>
-        <version>1.0.3.9</version>
+        <version>1.0.4.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -31,27 +31,11 @@
                             <pattern>ml.karmaconfigs.api</pattern>
                             <shadedPattern>ml.karmaconfigs.shaded.karmapi</shadedPattern>
                         </relocation>
+                        <relocation>
+                            <pattern>dev.dbassett.skullcreator</pattern>
+                            <shadedPattern>ml.karmaconfigs.shaded.skullcreator</shadedPattern>
+                        </relocation>
                     </relocations>
-                    <filters>
-                        <filter>
-                            <artifact>*:*</artifact>
-                            <excludes>
-                                <exclude>com/cryptomorin/xseries/XBiome*</exclude>
-                                <exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
-                                <exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
-                                <exclude>com/cryptomorin/xseries/XBlock*</exclude>
-                                <exclude>com/cryptomorin/xseries/XEnchantment*</exclude>
-                                <exclude>com/cryptomorin/xseries/XEntity*</exclude>
-                                <exclude>com/cryptomorin/xseries/XItemStack*</exclude>
-                                <exclude>com/cryptomorin/xseries/XPotion*</exclude>
-                                <exclude>com/cryptomorin/xseries/XSound*</exclude>
-                                <exclude>com/cryptomorin/xseries/messages/Actionbar*</exclude>
-                                <exclude>com/cryptomorin/xseries/messages/Titles*</exclude>
-                                <exclude>com/cryptomorin/xseries/particles/ParticleDisplay*</exclude>
-                                <exclude>com/cryptomorin/xseries/particles/XParticle*</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
                 </configuration>
                 <executions>
                     <execution>
@@ -91,6 +75,10 @@
             <id>minecraft-repo</id>
             <url>https://libraries.minecraft.net/</url>
         </repository>
+        <repository>
+            <id>skullcreator-repo</id>
+            <url>https://dl.bintray.com/deanveloper/SkullCreator</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -98,6 +86,12 @@
             <groupId>ml.karmaconfigs</groupId>
             <artifactId>KarmaAPI</artifactId>
             <version>2.6-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>dev.dbassett</groupId>
+            <artifactId>skullcreator</artifactId>
+            <version>3.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
