--- a/src/main/resources/messages/messages_fr.yml
+++ b/src/main/resources/messages/messages_fr.yml
@@ -80,24 +80,12 @@ IllegalName:
   - "{chars}"
 PinSet: "&aVotre code pin a été défini sur &7{pin}"
 AlreadyPin: "&cVous avez déjà défini votre code pin"
-NoPin: "&cTu n"as pas d"épingle!"
+NoPin: "&cTu n'as pas d'épingle!"
 SetPin: "&cUtilisation: &b/pin <pin>"
 ResetPin: "&cUtilisation: &b/resetPin <pin>"
 PinDisabled: "&cLes broches sont désactivées"
 PinLength: "&cIl pin doit avoir 4 chiffres"
 IncorrectPin: "&cIl pin specificato non è corretto"
-EmailDisabled: "&cLe système de messagerie est désactivé sur ce serveur!"
-InvalidEmail: "&cL'e-mail que vous avez spécifié est un e-mail non valide"
-NoEmail: "&cVous n"avez défini aucune adresse e-mail dans votre compte"
-EmailSet: "&aVous avez correctement défini l'adresse e-mail de votre compte sur: &7{email}"
-EmailSent: "&aCode de récupération envoyé à votre adresse e-mail"
-EmailError: "&cUne erreur s"est produite lors de l"envoi d"un e-mail, réessayez plus tard"
-NoIpValidation: "&cVous n"avez pas besoin de valider votre IP"
-IpValidated: "&aIP validé, merci!"
-NoRecovery: "&cVous n"avez pas demandé de récupération de mot de passe"
-CantRecovery: "&cVous ne pouvez pas demander une récupération de mot de passe lorsque vous êtes connecté"
-Recovery: "&aCode de récupération validé, veuillez saisir /register <new password> <new password>"
-InvalidCode: "&cCode de vérification invalide"
 IpBlocked:
   - "&cLes systèmes LockLogin ont détecté un"
   - "&ctrafic inhabituel sur votre IP et a été bloqué"
