--- a/src/main/resources/messages/messages_en.yml
+++ b/src/main/resources/messages/messages_en.yml
@@ -91,7 +91,12 @@ IpBlocked:
   - "&cunusual traffic on your IP and has been blocked"
   - "&f{time} {time_format}"
 AntiBot:
-  - "&f{ServerName}"
+  - "&f{serverName}"
   - ""
   - "&cAdd this server to your server list"
   - "&cIf you already have it, reload server list"
+OnlyAzuriom:
+  - "&f{serverName}"
+  - ""
+  - "&cPlease register your account from:"
+  - "&ehttps://myazuriomwebsite.com/user/register"
