--- a/src/main/resources/messages/messages_it.yml
+++ b/src/main/resources/messages/messages_it.yml
@@ -92,7 +92,12 @@ IpBlocked:
   - "&ctraffico insolito sul tuo IP ed è stato bloccato"
   - "&f{time} {time_format}"
 AntiBot:
-  - "&f{ServerName}"
+  - "&f{serverName}"
   - ""
   - "&cAggiungi questo server al tuo elenco di server"
   - "&cSe lo possiedi già, ricarica l{double_quote}elenco dei server"
+OnlyAzuriom:
+  - "&f{serverName}"
+  - ""
+  - "&cRegistra il tuo account da:"
+  - "&ehttps://myazuriomwebsite.com/user/register"
