--- a/src/main/resources/global.yml
+++ b/src/main/resources/global.yml
@@ -1,3 +1,4 @@
 project_name: ${project.name}
 project_version: ${project.version}
 project_developers: ${project.author}
+project_build: ${project.buildType}
