--- a/src/main/resources/messages/messages_es.yml
+++ b/src/main/resources/messages/messages_es.yml
@@ -1,11 +1,19 @@
 Prefix: "&eLockLogin &7>> "
 PlayerNotVerified: "&cNo puedes luchar contra {player} por qué aun no se ha logueado/registrado"
 AlreadyPlaying: "&cEste jugador ya está jugando"
-Login: "&bPorfavor, usa &3/login &c<contraseña>"
+Captcha: "&7Tu captcha es: &e{captcha}"
+TypeCaptcha: "&bPorfavor, usa &3/captcha &c{captcha}"
+CaptchaTimeOut: "&cHas tardado demasiado en validar tu captcha"
+SpecifyCaptcha: "&cPorfavor escribe un captcha válido"
+CaptchaValidated: "&aCódigo captcha validado"
+InvalidCaptcha: "&cEl captcha especificado no es válido o correcto"
+InvalidCaptchaArguments: "&cEl captcha especificado tiene argumentos inválidos ( {arguments}&c )"
+AlreadyCaptcha: "&aTu captcha ya está validado"
+Login: "&bPorfavor, usa &3/login &c<contraseña> {captcha}"
 Logged: "&aLogeado, bienvenido de vuelta &7{player}"
 AlreadyLogged: "&cYa estás logueado"
 LogError: "&cError al intentar iniciar sesión: &4contraseña incorrecta"
-Register: "&bPorfavor, usa &3/register &c<contraseña> <contraseña>"
+Register: "&bPorfavor, usa &3/register &c<contraseña> <contraseña> {captcha}"
 Registered: "&aRegistro completado, gracias por jugar"
 AlreadyRegistered: "&cYa estás registrado"
 RegisterError: "&cError al intentar registrarse: &4Las contraseñas no coinciden"
