--- a/src/main/resources/messages/messages_fr.yml
+++ b/src/main/resources/messages/messages_fr.yml
@@ -1,11 +1,19 @@
 Prefix: "&eLockLogin &7>> "
 PlayerNotVerified: "&cTu ne peut pas tapper {player} tant qu'il n'est pas connecté/enregistré"
 AlreadyPlaying: "&cCe joueur joue actuellement"
-Login: "&bVeuillez, utiliser &3/login &c<mot de passe>"
+Captcha: "&7Votre code captcha est: &e{captcha}"
+TypeCaptcha: "&bVeuillez utiliser &3/captcha &c{captcha}"
+CaptchaTimeOut: "&cVous avez pris trop de temps pour écrire le captcha"
+SpecifyCaptcha: "&cVeuillez fournir un code captcha valide"
+CaptchaValidated: "&aCode captcha validé"
+InvalidCaptcha: "&cLe code captcha spécifié n'est pas valide ou correct"
+InvalidCaptchaArguments: "&cLe captcha fourni a des arguments non valides ( {arguments}&c )"
+AlreadyCaptcha: "&aVotre code captcha est déjà vérifié"
+Login: "&bVeuillez, utiliser &3/login &c<mot de passe> {captcha}"
 Logged: "&aTu es désormais connecté ! Bienvenue à toi &7{player} !"
 AlreadyLogged: "&cTu es déjà connecté !"
 LogError: "&cErreur ! &4Mot de passe incorrecte"
-Register: "&bUtilisez &3/register &c<mot de passe> <mot de passe>"
+Register: "&bUtilisez &3/register &c<mot de passe> <mot de passe> {captcha}"
 Registered: "&aSuccès de l'enregistrement !"
 AlreadyRegistered: "&cTu es déjà enregistré sur nos bases de données !"
 RegisterError: "&cLes deux mot de passes ne correspondent pas !"
