--- a/src/main/resources/messages/messages_it.yml
+++ b/src/main/resources/messages/messages_it.yml
@@ -1,11 +1,19 @@
 Prefix: "&eLockLogin &7>> "
 PlayerNotVerified: "&cNon puoi combattere {player} mentre non sei logato/registrato"
 AlreadyPlaying: "&cQuesto giocatore sta già giocando"
-Login: "&bPerfavore, usa &3/login &c<password>"
+Captcha: "&7Il tuo codice captcha è: &e{captcha}"
+TypeCaptcha: "&bSi prega di utilizzare &3/captcha &c{captcha}"
+CaptchaTimeOut: "&cHai impiegato troppo tempo per scrivere captcha"
+SpecifyCaptcha: "&cFornisci un codice captcha valido"
+CaptchaValidated: "&aCodice captcha convalidato"
+InvalidCaptcha: "&cIl codice captcha specificato non è valido o corretto"
+InvalidCaptchaArguments: "&cIl captcha fornito ha argomenti non validi ( {arguments}&c )"
+AlreadyCaptcha: "&aIl tuo codice captcha è già verificato"
+Login: "&bPerfavore, usa &3/login &c<password> {captcha}"
 Logged: "&aLogato, bentornato &7{player}"
 AlreadyLogged: "&cSei già logato"
 LogError: "&cErrore mentre ti stavi logando: &4password non corretta"
-Register: "&bPerfavore, usa &3/register &c<password> <password>"
+Register: "&bPerfavore, usa &3/register &c<password> <password> {captcha}"
 Registered: "&aRegistrazione completata, grazie"
 AlreadyRegistered: "&cSei già registrato"
 RegisterError: "&cErrore mentre ti stavi registrando: &4Le password non combacciano"
