--- a/src/main/resources/messages/messages_pl.yml
+++ b/src/main/resources/messages/messages_pl.yml
@@ -1,11 +1,19 @@
 Prefix: "&eLockLogin &7» "
 PlayerNotVerified: "&cNie możesz walczyć z {player} gdy nie jest zalogowany/zarejstrowany"
 AlreadyPlaying: "&cTen gracz już gra"
-Login: "&bZaloguj się za pomocą polecenia: &3/login &c<hasło>"
+Captcha: "&7Twój kod captcha to: &e{captcha}"
+TypeCaptcha: "&bProszę użyć &3/captcha &c{captcha}"
+CaptchaTimeOut: "&cNapisanie captcha zajęło Ci zbyt dużo czasu"
+SpecifyCaptcha: "&cPodaj prawidłowy kod captcha"
+CaptchaValidated: "&aZatwierdzono kod Captcha"
+InvalidCaptcha: "&cPodany kod captcha jest nieprawidłowy lub nieprawidłowy"
+InvalidCaptchaArguments: "&cPodana captcha ma nieprawidłowe argumenty ( {arguments}&c )"
+AlreadyCaptcha: "&aTwój kod captcha jest już zweryfikowany"
+Login: "&bZaloguj się za pomocą polecenia: &3/login &c<hasło> {captcha}"
 Logged: "&aZalogowano, witaj ponownie &7{player}"
 AlreadyLogged: "&cJesteś już zalogowany"
 LogError: "&cBłąd podczas próby logowania: &4Nieprawidłowe hasło!"
-Register: "&bZarejstruj się za pomocą polecenia: &3/register &c<hasło> <powtórzhasło>"
+Register: "&bZarejstruj się za pomocą polecenia: &3/register &c<hasło> <powtórzhasło> {captcha}"
 Registered: "&aRejestracja zakończona, baw się dobrze!"
 AlreadyRegistered: "&cJesteś już zarejestrowany"
 RegisterError: "&cBłąd podczas próby rejestracji: &4Hasła nie są identyczne!"
