--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,6 +11,8 @@ prefix: "LockLogin"
 description: "Adds an extra protection to your Bukkit-Spigot-Paper/BungeeCord  server with this plugins that adds 2FA to his security system"
 ignoreUpdateVersion: false
 commands:
+  captcha:
+    description: The main captcha command
   register:
     description: The main register command
     aliases:
