--- a/src/main/resources/auto-generated/mysql.yml
+++ b/src/main/resources/auto-generated/mysql.yml
@@ -47,7 +47,7 @@ MySQL:
 # MySQL table, if you want to completely
 # store all the columns, type "ALL"
 IgnoredColumns:
-  - "REALNAME"
+  - "ALL"
 
 #MySQL connection options
 Connection:
