--- a/src/main/resources/messages/messages_cz.yml
+++ b/src/main/resources/messages/messages_cz.yml
@@ -1,11 +1,19 @@
 Prefix: "&eLockLogin &7>> "
 PlayerNotVerified: "&cNemůžeš bojovat proti {player} zatímco není přihlášen / registrován"
 AlreadyPlaying: "&cTento hráč už hraje"
-Login: "&bProsím, použi &3/login &c<tvé heslo>"
+Captcha: "&7Váš kód captcha je: &e{captcha}"
+TypeCaptcha: "&bProsím, použijte &3/captcha &c{captcha}"
+CaptchaTimeOut: "&cPsaní captcha vám zabralo příliš mnoho času"
+SpecifyCaptcha: "&cUveďte platný kód captcha"
+CaptchaValidated: "&aCaptcha kód ověřen"
+InvalidCaptcha: "&cZadaný kód captcha není platný nebo správný"
+InvalidCaptchaArguments: "&cZadaná captcha má neplatné argumenty ( {arguments}&c )"
+AlreadyCaptcha: "&aVáš kód captcha je již ověřen"
+Login: "&bProsím, použi &3/login &c<tvé heslo> {captcha}"
 Logged: "&aSi přihlášen, Vítej zpět &7{player}"
 AlreadyLogged: "&cUž si přihlášen"
 LogError: "&cPři pokusu o přihlášení došlo k chybě: &4Zadal si špatné heslo"
-Register: "&bProsím, použi &3/register &c<heslo> <heslo znovu>"
+Register: "&bProsím, použi &3/register &c<heslo> <heslo znovu> {captcha}"
 Registered: "&aRegistrace dokončena, děkujeme za hraní"
 AlreadyRegistered: "&cUž si zaregistrován!"
 RegisterError: "&cPři pokusu o registraci došlo k chybě: &4Hesla se neshodují"
