--- a/src/main/resources/messages/messages_en.yml
+++ b/src/main/resources/messages/messages_en.yml
@@ -1,11 +1,19 @@
 Prefix: "&eLockLogin &7>> "
 PlayerNotVerified: "&cYou can't fight against {player} while he's not logged/registered"
 AlreadyPlaying: "&cThat player is already playing"
-Login: "&bPlease, use &3/login &c<password>"
+Captcha: "&7Your captcha code is: &e{captcha}"
+TypeCaptcha: "&bPlease, use &3/captcha &c{captcha}"
+CaptchaTimeOut: "&cYou took too much time to write captcha"
+SpecifyCaptcha: "&cPlease provide a valid captcha code"
+CaptchaValidated: "&aCaptcha code validated"
+InvalidCaptcha: "&cThe specified captcha code is not valid or correct"
+InvalidCaptchaArguments: "&cThe provided captcha has invalid arguments ( {arguments}&c )"
+AlreadyCaptcha: "&aYour captcha code is already verified"
+Login: "&bPlease, use &3/login &c<password> &e{captcha}"
 Logged: "&aLogged-in, welcome back &7{player}"
 AlreadyLogged: "&cYou are already logged"
 LogError: "&cError while trying to log-in: &4incorrect password"
-Register: "&bPlease, use &3/register &c<password> <password>"
+Register: "&bPlease, use &3/register &c<password> <password> &e{captcha}"
 Registered: "&aRegister completed, thank for playing"
 AlreadyRegistered: "&cYou are already registered"
 RegisterError: "&cError while trying to register: &4Passwords doesn't match"
