--- a/src/main/resources/messages/messages_es.yml
+++ b/src/main/resources/messages/messages_es.yml
@@ -100,12 +100,12 @@ IpBlocked:
   - "&ctráfico inusual en tu IP y ha sido bloqueada"
   - "&f{time} {time_format}"
 AntiBot:
-  - "&f{serverName}"
+  - "&f{ServerName}"
   - ""
   - "&cAgrega el servidor a tu lista de servidores"
   - "&cSi ya lo tienes, recarga la lista de servidores"
 OnlyAzuriom:
-  - "&f{serverName}"
+  - "&f{ServerName}"
   - ""
   - "&cRegistre su cuenta desde:"
   - "&ehttps://myazuriomwebsite.com/user/register"
