--- a/src/main/resources/messages/messages_zh.yml
+++ b/src/main/resources/messages/messages_zh.yml
@@ -100,12 +100,12 @@ IpBlocked:
   - "&c检测到异常流量，已阻止"
   - "&f{time} {time_format}"
 AntiBot:
-  - "&f{serverName}"
+  - "&f{ServerName}"
   - ""
   - "&c将此服务器添加到当前服务器列表中"
   - "&c如已添加，请重新加载服务器列表"
 OnlyAzuriom:
-  - "&f{serverName}"
+  - "&f{ServerName}"
   - ""
   - "&c请从以下位置注册您的帐户:"
   - "&ehttps://myazuriomwebsite.com/user/register"
