--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>LockLogin</artifactId>
     <groupId>ml.karmaconfigs</groupId>
-    <version>1.0.7.6</version>
+    <version>1.0.7.8</version>
     <packaging>jar</packaging>
 
     <name>LockLogin</name>
@@ -34,7 +34,7 @@
         <connection>scm:git:git://github.com/KarmaConfigs/LockLogin.git</connection>
         <developerConnection>scm:git:ssh://github.com:KarmaConfigs/LockLogin.git</developerConnection>
         <url>http://github.com/KarmaConfigs/LockLogin/tree/master</url>
-        <tag>1.0.7.4</tag>
+        <tag>1.0.7.6</tag>
     </scm>
 
     <build>
@@ -145,7 +145,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.author>KarmaDev</project.author>
-        <project.buildType>SNAPSHOT</project.buildType>
+        <project.buildType>RELEASE</project.buildType>
+        <project.debug>false</project.debug>
     </properties>
 
     <!--
@@ -184,7 +185,7 @@
         <dependency>
             <groupId>ml.karmaconfigs</groupId>
             <artifactId>KarmaAPI</artifactId>
-            <version>2.9-SNAPSHOT</version>
+            <version>3.6-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -228,7 +229,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>20.0</version>
+            <version>30.1.1-jre</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -248,17 +249,6 @@
             <artifactId>cassandra-all</artifactId>
             <version>0.8.1</version>
             <scope>provided</scope>
-
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -267,9 +257,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
