--- a/src/main/resources/configs/config_spigot.yml
+++ b/src/main/resources/configs/config_spigot.yml
@@ -67,25 +67,25 @@ Login:
 #the specified in Login/Register section
 #( TimeOut time )
 MessagesInterval:
-  Register: 5
-  Login: 5
+  Registration: 5
+  Logging: 5
 
 #Captcha options
 # Available options:
-#   COMPLEX - Requires to do /captcha <captcha> before
+#   COMPLEX -> Requires to do /captcha <captcha> before
 #             login or register
-#   SIMPLE - Requires to put the captcha during login
+#   SIMPLE -> Requires to put the captcha during login
 #            and register
-#   DISABLED - Completely disables this feature
+#   DISABLED -> Completely disables this feature
 #              ( Not recommended, use it at your own risk )
-# TimeOut: Set to 0 to disable
+# TimeOut -> Set to 0 to disable
 #
-# Difficulty: Captcha difficulty settings
-#   Length: Captcha code length ( min is 8, max is 16 )
-#   Letters: Include letters in the captcha
-#   Strikethrough: Strikethrough captcha settings
-#     Enabled: Enable strikethrough feature
-#     Random: Randomize the characters with strikethrough
+# Difficulty -> Captcha difficulty settings
+#   Length -> Captcha code length ( min is 8, max is 16 )
+#   Letters -> Include letters in the captcha
+#   Strikethrough -> Strikethrough captcha settings
+#     Enabled -> Enable strikethrough feature
+#     Random -> Randomize the characters with strikethrough
 #             effect
 Captcha:
   Mode: "SIMPLE"
@@ -93,9 +93,9 @@ Captcha:
   Difficulty:
     Length: 8
     Letters: true
-    Strikethrough:
-      Enabled: true
-      Random: true
+  Strikethrough:
+    Enabled: true
+    Random: true
 
 #Encryption configuration
 # Available types:
