--- a/src/main/resources/global.yml
+++ b/src/main/resources/global.yml
@@ -2,3 +2,4 @@ project_name: ${project.name}
 project_version: ${project.version}
 project_developers: ${project.author}
 project_build: ${project.buildType}
+project_debug: ${project.debug}
